// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LeadBlock component renders correctly 1`] = `
<div>
  <div
    class="MuiGrid-root LeadBlock-root-1 MuiGrid-container MuiGrid-spacing-xs-3"
  >
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-8"
    >
      <div
        class="LeadBlock-leadBlockContentSection-3"
      >
        Content section 1 - body
      </div>
      <div
        class="LeadBlock-leadBlockContentSection-3"
      >
        <h5
          class="MuiTypography-root LeadBlock-leadBlockContentHeading-2 Typography-root-6 MuiTypography-h5"
          data-testid="typography"
        >
          Content section 2 - heading
        </h5>
        Content section 2 - body
      </div>
      <div
        class="LeadBlock-leadBlockContentSection-3"
      >
        <h5
          class="MuiTypography-root LeadBlock-leadBlockContentHeading-2 Typography-root-6 MuiTypography-h5"
          data-testid="typography"
        >
          Content section 3 - heading
        </h5>
        Content section 3 - body
      </div>
    </div>
    <div
      class="MuiGrid-root Grid-item-4 MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-4"
    >
      <div
        class="ColorPair-root-18 ColorPair-pearl-20"
      >
        <div
          class="PostItCard-root-14"
        >
          <div
            class="PostItCard-section-15"
          >
            <h4
              class="MuiTypography-root Typography-root-6 MuiTypography-h4"
              data-testid="typography"
            >
              Card heading 1
            </h4>
            <div
              class="PostItCard-content-16"
            >
              Card content 1
            </div>
            <div
              class="PostItCard-action-17"
            >
              Card action 1
            </div>
          </div>
          <div
            class="PostItCard-section-15"
          >
            <h5
              class="MuiTypography-root Typography-root-6 MuiTypography-h5"
              data-testid="typography"
            >
              Card heading 2
            </h5>
            <div
              class="PostItCard-content-16"
            >
              Card content 2
            </div>
            <div
              class="PostItCard-action-17"
            >
              Card action 2
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`LeadBlock component renders width card theme 1`] = `
<div>
  <div
    class="MuiGrid-root LeadBlock-root-44 MuiGrid-container MuiGrid-spacing-xs-3"
  >
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-8"
    >
      <div
        class="LeadBlock-leadBlockContentSection-46"
      >
        Content section 1 - body
      </div>
      <div
        class="LeadBlock-leadBlockContentSection-46"
      >
        <h5
          class="MuiTypography-root LeadBlock-leadBlockContentHeading-45 Typography-root-49 MuiTypography-h5"
          data-testid="typography"
        >
          Content section 2 - heading
        </h5>
        Content section 2 - body
      </div>
      <div
        class="LeadBlock-leadBlockContentSection-46"
      >
        <h5
          class="MuiTypography-root LeadBlock-leadBlockContentHeading-45 Typography-root-49 MuiTypography-h5"
          data-testid="typography"
        >
          Content section 3 - heading
        </h5>
        Content section 3 - body
      </div>
    </div>
    <div
      class="MuiGrid-root Grid-item-47 MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-4"
    >
      <div
        class="ColorPair-root-61 ColorPair-blue900-75"
      >
        <div
          class="PostItCard-root-57"
        >
          <div
            class="PostItCard-section-58"
          >
            <h4
              class="MuiTypography-root Typography-root-49 MuiTypography-h4"
              data-testid="typography"
            >
              Card heading 1
            </h4>
            <div
              class="PostItCard-content-59"
            >
              Card content 1
            </div>
            <div
              class="PostItCard-action-60"
            >
              Card action 1
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
